src/assets/css/suneditor.css
/* suneditor main */
.sun-editor {width:auto; height:auto; box-sizing:border-box; font-family:Helvetica Neue, sans-serif; border:1px solid #dadada; background-color:#FFF;}
.sun-editor * {box-sizing:border-box; user-select: none; -webkit-user-drag:none;}
.sun-editor-common input, .sun-editor-common select, .sun-editor-common textarea, .sun-editor-common button {font-size:14px; line-height:1.5;}
.sun-editor-common body, .sun-editor-common div, .sun-editor-common dl, .sun-editor-common dt, .sun-editor-common dd, .sun-editor-common ul, .sun-editor-common ol, .sun-editor-common li,
.sun-editor-common h1, .sun-editor-common h2, .sun-editor-common h3, .sun-editor-common h4, .sun-editor-common h5, .sun-editor-common h6, .sun-editor-common pre, .sun-editor-common code,
.sun-editor-common form, .sun-editor-common fieldset, .sun-editor-common legend, .sun-editor-common textarea, .sun-editor-common p, .sun-editor-common blockquote, .sun-editor-common th,
.sun-editor-common td, .sun-editor-common input, .sun-editor-common select, .sun-editor-common textarea, .sun-editor-common button {margin:0; padding:0; border:0; color:#000 !important;}
.sun-editor-common dl, .sun-editor-common ul, .sun-editor-common ol, .sun-editor-common menu, .sun-editor-common li {list-style: none !important;}
.sun-editor-common hr {margin:6px 0 6px 0 !important;}
.sun-editor textarea {resize:none !important; border:0 !important;}
.sun-editor button {border:0 none; background-color:transparent; touch-action:manipulation; cursor:pointer; outline: none;}
.sun-editor input, .sun-editor select, .sun-editor textarea, .sun-editor button {vertical-align: middle;}
.sun-editor button .txt {display: block; margin-top: 0; white-space:nowrap; overflow:hidden; text-overflow:ellipsis;}

/** icon */
/* Generated by Glyphter (http://www.glyphter.com) on  Sun Aug 19 2018*/
@font-face {
    font-family: 'Suneditor-icon';
    src: url('../fonts/Suneditor-icon.eot');
    src: url('../fonts/Suneditor-icon.eot?#iefix') format('embedded-opentype'),
         url('../fonts/Suneditor-icon.woff2') format('woff2'),
         url('../fonts/Suneditor-icon.woff') format('woff'),
         url('../fonts/Suneditor-icon.ttf') format('truetype'),
         url('../fonts/Suneditor-icon.svg#Glyphter') format('svg');
    font-weight: normal;
    font-style: normal;
}
.sun-editor [class*='icon-']:before {
    -moz-osx-font-smoothing:grayscale;
    -webkit-font-smoothing:antialiased;
    font-family: 'Suneditor-icon';
    display: inline-block;
    font-style: normal;
    font-variant: normal;
    font-weight: normal;
    text-rendering:auto;
    font-size: 15px;
    color: #000;
}
.sun-editor .sun-editor-id-toolbar [class*='icon-']:before {
    line-height: 2.1;
}
.sun-editor .icon-align-just:before{content:'\0041';}
.sun-editor .icon-align-left:before{content:'\0042';}
.sun-editor .icon-align-right:before{content:'\0043';}
.sun-editor .icon-align-center:before{content:'\0044';}
.sun-editor .icon-underline:before{content:'\0045';}
.sun-editor .icon-bold:before{content:'\0046';}
.sun-editor .icon-italic:before{content:'\0047';}
.sun-editor .icon-strokethrough:before{content:'\0048';}
.sun-editor .icon-subscript:before{content:'\0049';}
.sun-editor .icon-superscript:before{content:'\004a';}
.sun-editor .icon-redo:before{content:'\004b';}
.sun-editor .icon-undo:before{content:'\004c';}
.sun-editor .icon-erase:before{content:'\004d';}
.sun-editor .icon-fontColor:before{content:'\004e';}
.sun-editor .icon-hiliteColor:before{content:'\004f';}
.sun-editor .icon-indent-left:before{content:'\0050';}
.sun-editor .icon-indent-right:before{content:'\0051';}
.sun-editor .icon-list-bullets:before{content:'\0052';}
.sun-editor .icon-list-number:before{content:'\0053';}
.sun-editor .icon-grid:before{content:'\0054';}
.sun-editor .icon-code-view:before{content:'\0055';}
.sun-editor .icon-preview:before{content:'\0056';}
.sun-editor .icon-showBlocks:before{content:'\0057';}
.sun-editor .icon-expansion:before{content:'\0058';}
.sun-editor .icon-reduction:before{content:'\0059';}
.sun-editor .icon-image:before{content:'\005a';}
.sun-editor .icon-link:before{content:'\0061';}
.sun-editor .icon-video:before{content:'\0062';}
.sun-editor .icon-print:before{content:'\0063';}
.sun-editor .icon-modify:before{content:'\0064';}
.sun-editor .icon-revert:before{content:'\0065';}
.sun-editor .icon-arrow-down:before{content:'\0066'; font-size: 10px;}
.sun-editor .icon-map-pin:before{content:'\0067';}
.sun-editor .icon-cancel:before{content:'\0068'; font-size:10px;}
.sun-editor .icon-hr:before{content:'\0069';}
.sun-editor .icon-insert-column-right:before{content:'\006a';}
.sun-editor .icon-insert-row-below:before{content:'\006b';}
.sun-editor .icon-insert-row-above:before{content:'\006c';}
.sun-editor .icon-insert-column-left:before{content:'\006d';}
.sun-editor .icon-delete-row:before{content:'\006e';}
.sun-editor .icon-delete-column:before{content:'\006f';}
.sun-editor .icon-quote:before{content:'\0070';}
.sun-editor .icon-empty-file:before{content:'\0071';}
.sun-editor .icon-paragraph:before{content:'\0072';}
.sun-editor .icon-delete:before{content:'\0073';}

/* used color #000 , #fff , #CCC , #d4e3ea , #bbd5e0 , #a2bfcc , #8baab7*/
/* container */
.sun-editor .sun-editor-container {position:relative; width:100%; height:100%;}

/* controller arrow */
.sun-editor .arrow, .sun-editor .arrow:after {position:absolute; display:block; width:0; height:0; border:11px solid transparent;}
.sun-editor .arrow {top:-11px; left:20px !important; margin-left:-11px; border-top-width:0; border-bottom-color:#999; border-bottom-color:rgba(0, 0, 0, .25);}
.sun-editor .arrow:after {top:1px; margin-left:-11px; content:" "; border-top-width:0; border-bottom-color:#fff;}

/* tool bar */
.sun-editor .sun-editor-id-toolbar-cover {position:absolute; display:none; font-size:36px; width:100%; height:100%; top:0; left:0; background-color:#fefefe; opacity:.5; filter:alpha(opacity=50); cursor:not-allowed; z-index:1;}
/* ... */

